removed more old files

--- a/app/globals.css
+++ b/app/globals.css
@@ -1,3 +1,27 @@
+@font-face {
+  font-family: "Satoshi";
+  src: url("https://fonts.cdnfonts.com/css/satoshi") format("woff2");
+  font-weight: 400;
+  font-style: normal;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: "Satoshi";
+  src: url("https://fonts.cdnfonts.com/css/satoshi") format("woff2");
+  font-weight: 500;
+  font-style: normal;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: "Satoshi";
+  src: url("https://fonts.cdnfonts.com/css/satoshi") format("woff2");
+  font-weight: 700;
+  font-style: normal;
+  font-display: swap;
+}
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
@@ -96,4 +120,8 @@
 
 .metrics-open {
   overflow-y: auto;
+}
+
+.font-satoshi {
+  font-family: "Satoshi", sans-serif;
 }
