--- a/app/globals.css
+++ b/app/globals.css
@@ -128,12 +128,14 @@
   font-family: "Satoshi", sans-serif;
 }
 .responsive-shadow {
-  text-shadow: 0 0 10px hsl(var(--light-blue));
+  color: white;
+  text-shadow: 0 0 10px hsl(var(--brand-blue));
 }
 
 @media (min-width: 768px) {
   .responsive-shadow {
-    text-shadow: 0 0 10px rgba(255, 255, 255, 0.8);
+    color: hsl(var(--brand-blue));
+    text-shadow: 0 0 5px rgba(255, 255, 255, 0.8);
   }
 }
 
