--- a/app/globals.css
+++ b/app/globals.css
@@ -115,13 +115,8 @@
   }
   html,
   body {
-    height: 100vh; /* Use vh for viewport height */
-    overflow: hidden;
+    height: 100%;
   }
-}
-
-.metrics-open {
-  overflow-y: auto;
 }
 
 .font-satoshi {
@@ -161,4 +156,33 @@
 
 .animate-pulsate {
   animation: pulsate 1.5s infinite;
+}
+
+.glowing-text-cyan {
+  text-shadow:
+    0 0 5px rgba(0, 255, 255, 0.7),
+    0 0 10px rgba(0, 255, 255, 0.5),
+    0 0 20px rgba(0, 255, 255, 0.3);
+}
+
+.glowing-text-purple {
+  text-shadow:
+    0 0 5px rgba(191, 0, 255, 0.7),
+    0 0 10px rgba(191, 0, 255, 0.5),
+    0 0 20px rgba(191, 0, 255, 0.3);
+}
+
+.bg-grid-pattern {
+  background-image: linear-gradient(rgba(255, 255, 255, 0.05) 1px, transparent 1px),
+    linear-gradient(90deg, rgba(255, 255, 255, 0.05) 1px, transparent 1px);
+  background-size: 20px 20px;
+}
+
+@keyframes rise {
+  from {
+    transform: translateY(0);
+  }
+  to {
+    transform: translateY(-100vh);
+  }
 }
